--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -20,4 +20,26 @@
   <div *ngIf="selectedItem" padding>
     You navigated here from <b>{{selectedItem.title}}</b>
   </div>
+</ion-content>
+ -->
+
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>List</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let student of students">
+      <ion-avatar item-left>
+        <img src="{{student.picture.thumbnail}}">
+      </ion-avatar>
+      <h2>{{student.name.first}} {{student.name.last}}</h2>
+      <p>{{student.email}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
