--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,6 +3,14 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
+
+      <ion-buttons end>
+        <button ion-button clear (click)="logout()">
+          <ion-icon name="log-out"></ion-icon>
+        </button>
+      </ion-buttons>
+
+
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
