notification provider update

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -39,8 +39,8 @@
         <ion-card-header>
           {{notification.objet}}
         </ion-card-header>
-        <ion-card-content>
-          {{notification.texte}}
+        <ion-card-content style="white-space: pre-line;">
+          <p>{{notification.texte}}</p>
         </ion-card-content>
         <ion-note>
           {{notification.date_notif}} - {{notification.published_by}}
